--- a/index.html
+++ b/index.html
@@ -3,178 +3,183 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Harmonia Hub - Manu & Pedro</title>
+<title>Harmonia Hub</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-body { font-family:'Plus Jakarta Sans',sans-serif; background:#F8FAFC; }
+body{font-family:'Plus Jakarta Sans',sans-serif;background:#F8FAFC}
 .tab-content{display:none}
-.tab-content.active{display:block;animation:slide .25s ease}
+.tab-content.active{display:block;animation:fade .2s}
 .active-nav{border-bottom:3px solid #6366f1;color:#6366f1;font-weight:800}
-@keyframes slide{from{opacity:0;transform:translateY(8px)}to{opacity:1}}
+@keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1}}
 </style>
 </head>
 
 <body>
 
-<header class="bg-white border-b sticky top-0 z-50 shadow-sm">
-  <div class="max-w-5xl mx-auto px-4 h-16 flex justify-between items-center">
-    <div class="flex items-center gap-2">
-      <div class="w-8 h-8 bg-indigo-600 rounded-lg flex items-center justify-center text-white font-bold">H</div>
-      <span class="font-bold text-lg">Harmonia<span class="text-indigo-600">.</span></span>
-    </div>
+<!-- LOGIN -->
+<div id="login" class="min-h-screen flex items-center justify-center">
+  <div class="bg-white p-6 rounded-xl shadow w-80 space-y-4">
+    <h1 class="text-xl font-bold text-center">Harmonia Hub</h1>
+    <input id="loginNome" placeholder="Seu nome" class="w-full p-3 bg-slate-100 rounded">
+    <button onclick="entrar()" class="w-full bg-indigo-600 text-white p-3 rounded">Entrar</button>
+  </div>
+</div>
 
-    <div class="flex bg-slate-100 p-1 rounded-full text-xs font-semibold">
-      <button id="btn-Manu" onclick="switchUser('Manu')" class="px-4 py-1.5 rounded-full bg-white shadow text-indigo-600">Manu</button>
-      <button id="btn-Pedro" onclick="switchUser('Pedro')" class="px-4 py-1.5 rounded-full text-slate-500">Pedro</button>
-    </div>
+<!-- APP -->
+<div id="app" class="hidden">
+
+<header class="bg-white border-b sticky top-0 z-50">
+  <div class="max-w-5xl mx-auto px-4 h-16 flex justify-between items-center">
+    <span class="font-bold text-lg">Harmonia<span class="text-indigo-600">.</span></span>
+    <button onclick="showTab('perfil')" class="text-xs font-bold">👤 Perfil</button>
   </div>
 
-  <nav class="max-w-5xl mx-auto px-4 flex gap-4 text-[10px] font-black uppercase overflow-x-auto">
-    <button id="nav-casa" onclick="showTab('casa')" class="py-3 active-nav">🏠 Casa</button>
-    <button id="nav-dates" onclick="showTab('dates')" class="py-3 text-slate-400">🍷 Dates</button>
-    <button id="nav-pontos" onclick="showTab('pontos')" class="py-3 text-slate-400">🏆 Pontos</button>
+  <nav class="max-w-5xl mx-auto px-4 flex gap-4 text-[10px] font-black uppercase">
+    <button id="nav-tarefas" onclick="showTab('tarefas')" class="py-3 active-nav">🏠 Tarefas</button>
+    <button id="nav-lazer" onclick="showTab('lazer')" class="py-3 text-slate-400">🍷 Lazer</button>
     <button id="nav-financeiro" onclick="showTab('financeiro')" class="py-3 text-slate-400">💰 Financeiro</button>
-    <button id="nav-compras" onclick="showTab('compras')" class="py-3 text-slate-400">🛒 Compras</button>
   </nav>
 </header>
 
 <main class="max-w-5xl mx-auto p-4 space-y-6">
 
-<!-- CASA -->
-<section id="content-casa" class="tab-content active">
-  <h2 class="text-xl font-bold mb-3">Tarefas de <span id="view-name">Manu</span></h2>
-
-  <div id="dias" class="flex gap-2 mb-4"></div>
-  <div id="tarefas" class="space-y-3"></div>
-</section>
-
-<!-- DATES -->
-<section id="content-dates" class="tab-content space-y-4">
-  <h2 class="text-xl font-bold">Ideias de Date</h2>
-  <button onclick="sortearDate()" class="bg-amber-100 text-amber-700 px-4 py-2 rounded-lg font-bold">🎲 Sortear</button>
-  <div id="dates" class="grid md:grid-cols-2 gap-3"></div>
-</section>
-
-<!-- PONTOS -->
-<section id="content-pontos" class="tab-content">
-  <div class="grid grid-cols-2 gap-4 text-center">
-    <div class="bg-indigo-50 p-6 rounded-2xl">
-      <p class="text-3xl font-black text-indigo-600" id="pts-manu">0</p>
-      <p class="text-xs font-bold">Manu</p>
-    </div>
-    <div class="bg-teal-50 p-6 rounded-2xl">
-      <p class="text-3xl font-black text-teal-600" id="pts-pedro">0</p>
-      <p class="text-xs font-bold">Pedro</p>
-    </div>
+<!-- TAREFAS -->
+<section id="content-tarefas" class="tab-content active space-y-3">
+  <div class="flex justify-between items-center">
+    <h2 class="text-xl font-bold">Tarefas</h2>
+    <button onclick="alert(histTarefas.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
   </div>
+
+  <div class="flex gap-2">
+    <input id="novaTarefa" placeholder="Nova tarefa" class="flex-1 p-2 bg-slate-100 rounded">
+    <button onclick="addTarefa()" class="bg-indigo-600 text-white px-4 rounded">+</button>
+  </div>
+
+  <div id="tarefas"></div>
+</section>
+
+<!-- LAZER -->
+<section id="content-lazer" class="tab-content space-y-3">
+  <div class="flex justify-between items-center">
+    <h2 class="text-xl font-bold">Lazer</h2>
+    <button onclick="alert(histLazer.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
+  </div>
+
+  <div class="flex gap-2">
+    <input id="novoLazer" placeholder="Novo lazer" class="flex-1 p-2 bg-slate-100 rounded">
+    <button onclick="addLazer()" class="bg-amber-500 text-white px-4 rounded">+</button>
+  </div>
+
+  <div id="lazer"></div>
 </section>
 
 <!-- FINANCEIRO -->
-<section id="content-financeiro" class="tab-content space-y-4">
-  <div class="grid grid-cols-2 gap-4">
-    <div class="bg-emerald-500 text-white p-6 rounded-2xl">
-      <p>Sair juntos</p>
-      <p class="text-2xl font-black" id="total-sair">R$ 0,00</p>
-    </div>
-    <div class="bg-indigo-600 text-white p-6 rounded-2xl">
-      <p>Casa</p>
-      <p class="text-2xl font-black" id="total-casa">R$ 0,00</p>
-    </div>
+<section id="content-financeiro" class="tab-content space-y-3">
+  <div class="flex justify-between items-center">
+    <h2 class="text-xl font-bold">Financeiro</h2>
+    <button onclick="alert(histFinanceiro.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
   </div>
 
-  <input id="valor" type="number" placeholder="Valor" class="w-full p-3 rounded bg-slate-100">
-  <select id="destino" class="w-full p-3 rounded bg-slate-100">
-    <option value="sair">Sair juntos</option>
-    <option value="casa">Casa</option>
-  </select>
-  <button onclick="addValor()" class="w-full bg-slate-900 text-white p-3 rounded-lg">Adicionar</button>
+  <input id="valor" type="number" placeholder="Valor" class="w-full p-3 bg-slate-100 rounded">
+  <button onclick="addValor()" class="w-full bg-slate-900 text-white p-3 rounded">Adicionar</button>
+
+  <p class="font-bold">Total: <span id="total">R$ 0,00</span></p>
 </section>
 
-<!-- COMPRAS -->
-<section id="content-compras" class="tab-content space-y-2">
-  <h2 class="text-xl font-bold">Lista de Compras</h2>
-  <div id="compras"></div>
+<!-- PERFIL -->
+<section id="content-perfil" class="tab-content">
+  <h2 class="text-xl font-bold">Perfil</h2>
+  <p class="mt-2">Usuário logado: <strong id="perfilNome"></strong></p>
 </section>
 
 </main>
+</div>
 
 <script>
-const tarefas={
-"Segunda":[{t:"Lavar louça",p:20,u:"Manu"}],
-"Terça":[{t:"Lavar banheiro (15/15 dias)",p:50,u:"Pedro"}],
-"Quarta":[{t:"Lavar louça",p:20,u:"Pedro"},{t:"Lavar roupas",p:30,u:"Manu"}],
-"Quinta":[{t:"Limpar fogão (15/15 dias)",p:40,u:"Manu"}],
-"Sexta":[{t:"Lavar louça",p:20,u:"Manu"}],
-"Sábado":[{t:"Fazer comida",p:40,u:"Manu"}],
-"Domingo":[{t:"Passar pano",p:35,u:"Pedro"}]
-};
+let usuario=""
+let tarefas=[]
+let lazer=[]
+let saldo=0
 
-const dates=[
-"🌭 Night Dog","🥩 Estação da Picanha","🥟 Pastel da Sogra",
-"☕ Cafés","🎬 Cinema","🍣 Restaurante Japonês"
-];
+let histTarefas=[]
+let histLazer=[]
+let histFinanceiro=[]
 
-const compras=["Arroz","Feijão","Macarrão","Leite","Coca-cola"];
-
-let user="Manu",dia="Segunda",pontos={Manu:0,Pedro:0},saldo={sair:0,casa:0};
+function entrar(){
+  usuario=loginNome.value
+  if(!usuario) return
+  login.classList.add("hidden")
+  app.classList.remove("hidden")
+  perfilNome.innerText=usuario
+  render()
+}
 
 function showTab(id){
-document.querySelectorAll('.tab-content').forEach(s=>s.classList.remove('active'));
-document.getElementById('content-'+id).classList.add('active');
-document.querySelectorAll('nav button').forEach(b=>b.classList.remove('active-nav','text-indigo-600'));
-document.getElementById('nav-'+id).classList.add('active-nav','text-indigo-600');
+  document.querySelectorAll('.tab-content').forEach(s=>s.classList.remove('active'))
+  document.getElementById('content-'+id).classList.add('active')
+  document.querySelectorAll('nav button').forEach(b=>b.classList.remove('active-nav'))
+  document.getElementById('nav-'+id)?.classList.add('active-nav')
 }
 
-function switchUser(u){
-user=u;
-document.getElementById('view-name').innerText=u;
-document.getElementById('btn-Manu').classList.toggle('bg-white',u==="Manu");
-document.getElementById('btn-Pedro').classList.toggle('bg-white',u==="Pedro");
-render();
+function addTarefa(){
+  if(!novaTarefa.value)return
+  tarefas.push(novaTarefa.value)
+  novaTarefa.value=""
+  render()
 }
 
-function render(){
-document.getElementById('tarefas').innerHTML=(tarefas[dia]||[])
-.filter(t=>t.u===user)
-.map((t,i)=>`<div class="bg-white p-4 rounded-xl border flex justify-between">
-<span>${t.t}</span>
-<button onclick="concluir(${i})" class="text-xs bg-indigo-100 px-3 py-1 rounded">OK</button>
-</div>`).join("")||"Folga 🎉";
-
-document.getElementById('pts-manu').innerText=pontos.Manu;
-document.getElementById('pts-pedro').innerText=pontos.Pedro;
-document.getElementById('total-sair').innerText=saldo.sair.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
-document.getElementById('total-casa').innerText=saldo.casa.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
-
-document.getElementById('dates').innerHTML=dates.map(d=>`<div class="bg-white p-3 rounded-xl border">${d}</div>`).join("");
-document.getElementById('compras').innerHTML=compras.map(c=>`<div class="bg-white p-2 rounded border">${c}</div>`).join("");
-
-document.getElementById('dias').innerHTML=Object.keys(tarefas)
-.map(d=>`<button onclick="dia='${d}';render()" class="px-3 py-1 rounded bg-white border">${d.slice(0,3)}</button>`).join("");
+function removeTarefa(i){
+  histTarefas.push(tarefas[i])
+  tarefas.splice(i,1)
+  render()
 }
 
-function concluir(i){
-pontos[user]+=tarefas[dia][i].p;
-tarefas[dia].splice(i,1);
-render();
+function addLazer(){
+  if(!novoLazer.value)return
+  lazer.push(novoLazer.value)
+  novoLazer.value=""
+  render()
+}
+
+function removeLazer(i){
+  histLazer.push(lazer[i])
+  lazer.splice(i,1)
+  render()
 }
 
 function addValor(){
-const v=Number(valor.value);
-if(!v)return;
-saldo[destino.value]+=v;
-valor.value="";
-render();
+  if(!valor.value)return
+  saldo+=Number(valor.value)
+  histFinanceiro.push(`R$ ${valor.value}`)
+  valor.value=""
+  render()
 }
 
-function sortearDate(){
-alert(dates[Math.floor(Math.random()*dates.length)]);
-}
+function render(){
+  tarefasEl.innerHTML=""
+  tarefasEl.innerHTML=tarefas.map((t,i)=>`
+    <div class="bg-white p-3 rounded flex justify-between">
+      ${t}
+      <button onclick="removeTarefa(${i})">❌</button>
+    </div>`).join("")
 
-render();
+  document.getElementById('tarefas').innerHTML=tarefas.map((t,i)=>`
+    <div class="bg-white p-3 rounded flex justify-between">
+      ${t}
+      <button onclick="removeTarefa(${i})">❌</button>
+    </div>`).join("")
+
+  document.getElementById('lazer').innerHTML=lazer.map((l,i)=>`
+    <div class="bg-white p-3 rounded flex justify-between">
+      ${l}
+      <button onclick="removeLazer(${i})">❌</button>
+    </div>`).join("")
+
+  total.innerText=saldo.toLocaleString('pt-br',{style:'currency',currency:'BRL'})
+}
 </script>
 
 </body>
