--- a/index.html
+++ b/index.html
@@ -11,207 +11,120 @@
 <style>
 body { font-family:'Plus Jakarta Sans',sans-serif; background:#F8FAFC; }
 .tab-content{display:none}
-.tab-content.active{display:block;animation:slide .25s ease}
+.tab-content.active{display:block}
 .active-nav{border-bottom:3px solid #6366f1;color:#6366f1;font-weight:800}
-@keyframes slide{from{opacity:0;transform:translateY(8px)}to{opacity:1}}
 </style>
 </head>
 
 <body>
 
-<!-- LOGIN -->
-<div id="login" class="min-h-screen flex items-center justify-center">
-  <div class="bg-white p-6 rounded-xl shadow w-80 space-y-4">
-    <h1 class="text-xl font-bold text-center">Organizador Pessoal</h1>
-    <input id="loginNome" placeholder="Seu nome" class="w-full p-3 bg-slate-100 rounded">
-    <button onclick="entrar()" class="w-full bg-indigo-600 text-white p-3 rounded">Entrar</button>
-  </div>
-</div>
-
-<!-- APP -->
-<div id="app" class="hidden">
-
-<header class="bg-white border-b sticky top-0 z-50 shadow-sm">
+<header class="bg-white border-b sticky top-0 shadow-sm">
   <div class="max-w-5xl mx-auto px-4 h-16 flex justify-between items-center">
-    <span class="font-bold text-lg">Organizador<span class="text-indigo-600"> Pessoal</span></span>
-    <button onclick="showTab('perfil')" class="text-xs font-bold">👤 Perfil</button>
+    <span class="font-bold text-lg">Organizador<span class="text-indigo-600">.</span></span>
+
+    <div class="flex bg-slate-100 p-1 rounded-full text-xs font-semibold">
+      <button id="btn-Manu" onclick="switchUser('Manu')" class="px-4 py-1.5 rounded-full bg-white shadow text-indigo-600">Manu</button>
+      <button id="btn-Pedro" onclick="switchUser('Pedro')" class="px-4 py-1.5 rounded-full text-slate-500">Pedro</button>
+    </div>
   </div>
 
-  <nav class="max-w-5xl mx-auto px-4 flex gap-4 text-[10px] font-black uppercase overflow-x-auto">
-    <button id="nav-tarefas" onclick="showTab('tarefas')" class="py-3 active-nav">🏠 Tarefas</button>
+  <nav class="max-w-5xl mx-auto px-4 flex gap-4 text-[10px] font-black uppercase">
+    <button id="nav-tarefas" onclick="showTab('tarefas')" class="py-3 active-nav">🧹 Tarefas</button>
     <button id="nav-lazer" onclick="showTab('lazer')" class="py-3 text-slate-400">🍷 Lazer</button>
-    <button id="nav-financeiro" onclick="showTab('financeiro')" class="py-3 text-slate-400">💰 Financeiro</button>
     <button id="nav-compras" onclick="showTab('compras')" class="py-3 text-slate-400">🛒 Compras</button>
+    <button id="nav-financeiro" onclick="showTab('financeiro')" class="py-3 text-slate-400">💰 Financeiro</button>
   </nav>
 </header>
 
 <main class="max-w-5xl mx-auto p-4 space-y-6">
 
 <!-- TAREFAS -->
-<section id="content-tarefas" class="tab-content active space-y-3">
-  <div class="flex justify-between items-center">
-    <h2 class="text-xl font-bold">Tarefas</h2>
-    <button onclick="alert(histTarefas.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
-  </div>
-
-  <div class="flex gap-2">
-    <input id="novaTarefa" placeholder="Nova tarefa" class="flex-1 p-2 bg-slate-100 rounded">
-    <button onclick="addTarefa()" class="bg-indigo-600 text-white px-4 rounded">+</button>
-  </div>
-
+<section id="content-tarefas" class="tab-content active">
+  <h2 class="text-xl font-bold mb-3">Tarefas de <span id="view-user">Manu</span></h2>
   <div id="tarefas" class="space-y-2"></div>
 </section>
 
 <!-- LAZER -->
-<section id="content-lazer" class="tab-content space-y-3">
-  <div class="flex justify-between items-center">
-    <h2 class="text-xl font-bold">Lazer</h2>
-    <button onclick="alert(histLazer.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
-  </div>
+<section id="content-lazer" class="tab-content space-y-2">
+  <h2 class="text-xl font-bold">Lazer</h2>
+  <div id="lazer"></div>
+</section>
 
-  <div class="flex gap-2">
-    <input id="novoLazer" placeholder="Novo lazer" class="flex-1 p-2 bg-slate-100 rounded">
-    <button onclick="addLazer()" class="bg-amber-500 text-white px-4 rounded">+</button>
-  </div>
-
-  <div id="lazer" class="space-y-2"></div>
+<!-- COMPRAS -->
+<section id="content-compras" class="tab-content space-y-2">
+  <h2 class="text-xl font-bold">Compras</h2>
+  <div id="compras"></div>
 </section>
 
 <!-- FINANCEIRO -->
 <section id="content-financeiro" class="tab-content space-y-4">
-  <div class="flex justify-between items-center">
-    <h2 class="text-xl font-bold">Financeiro</h2>
-    <button onclick="alert(histFinanceiro.join('\n')||'Sem histórico')" class="text-xs">📜 Histórico</button>
-  </div>
-
-  <input id="valor" type="number" placeholder="Valor" class="w-full p-3 rounded bg-slate-100">
-  <select id="destino" class="w-full p-3 rounded bg-slate-100">
-    <option value="sair">Sair juntos</option>
-    <option value="casa">Casa</option>
-    <option value="lazer">Lazer</option>
-  </select>
-  <button onclick="addValor()" class="w-full bg-slate-900 text-white p-3 rounded">Adicionar</button>
-
-  <p class="font-bold">Total: <span id="total">R$ 0,00</span></p>
-</section>
-
-<!-- COMPRAS -->
-<section id="content-compras" class="tab-content space-y-3">
-  <h2 class="text-xl font-bold">Compras</h2>
-
-  <input id="compraNome" placeholder="O que comprar?" class="w-full p-3 bg-slate-100 rounded">
-  <input id="compraValor" type="number" placeholder="Valor" class="w-full p-3 bg-slate-100 rounded">
-  <select id="compraCategoria" class="w-full p-3 bg-slate-100 rounded">
-    <option value="Mercado">Mercado</option>
-    <option value="Casa">Casa</option>
-    <option value="Lazer">Lazer</option>
-  </select>
-  <button onclick="addCompra()" class="w-full bg-emerald-600 text-white p-3 rounded">Adicionar compra</button>
-
-  <div id="listaCompras" class="space-y-2"></div>
-</section>
-
-<!-- PERFIL -->
-<section id="content-perfil" class="tab-content">
-  <h2 class="text-xl font-bold">Perfil</h2>
-  <p class="mt-2">Usuário logado: <strong id="perfilNome"></strong></p>
+  <h2 class="text-xl font-bold">Financeiro</h2>
+  <p class="text-2xl font-black" id="total">R$ 0,00</p>
 </section>
 
 </main>
 
 <script>
-let usuario=""
-let tarefas = []
-let lazer = []
-let saldo = 0
-let compras = []
+let user = "Manu"
 
-let histTarefas = []
-let histLazer = []
-let histFinanceiro = []
+const tarefas = [
+  { nome:"Varrer a casa", user:"Manu" },
+  { nome:"Passar pano na casa", user:"Pedro" },
+  { nome:"Lavar a louça", user:"Manu" },
+  { nome:"Guardar a louça", user:"Pedro" },
+  { nome:"Lavar roupa", user:"Manu" },
+  { nome:"Estender roupa", user:"Pedro" },
+  { nome:"Recolher a roupa do varal", user:"Manu" },
+  { nome:"Tirar poeira dos móveis", user:"Pedro" },
+  { nome:"Trocar roupa de cama", user:"Manu" }
+]
 
-function entrar(){
-  usuario=loginNome.value
-  if(!usuario) return
-  login.classList.add("hidden")
-  app.classList.remove("hidden")
-  perfilNome.innerText = usuario
-  render()
-}
+const lazer = [
+  { nome:"Cinema", valor:70 },
+  { nome:"Estação da Picanha", valor:210 },
+  { nome:"Night Dog", valor:180 },
+  { nome:"Cafés", valor:90 },
+  { nome:"Restaurante Japonês", valor:240 },
+  { nome:"Pastel da Sogra", valor:150 }
+]
+
+const compras = [
+  "Arroz","Feijão","Café","Alho","Cebola","Leite","Macarrão",
+  "Acém Moído","Patinho Bife","Colchão Duro (Panela)"
+]
 
 function showTab(id){
   document.querySelectorAll('.tab-content').forEach(s=>s.classList.remove('active'))
   document.getElementById('content-'+id).classList.add('active')
-  document.querySelectorAll('nav button').forEach(b=>b.classList.remove('active-nav'))
-  document.getElementById('nav-'+id)?.classList.add('active-nav')
+  document.querySelectorAll('nav button').forEach(b=>b.classList.remove('active-nav','text-indigo-600'))
+  document.getElementById('nav-'+id).classList.add('active-nav','text-indigo-600')
 }
 
-function addTarefa(){
-  if(!novaTarefa.value) return
-  tarefas.push(novaTarefa.value)
-  novaTarefa.value=""
-  render()
-}
-
-function removeTarefa(i){
-  histTarefas.push(tarefas[i])
-  tarefas.splice(i,1)
-  render()
-}
-
-function addLazer(){
-  if(!novoLazer.value) return
-  lazer.push(novoLazer.value)
-  novoLazer.value=""
-  render()
-}
-
-function removeLazer(i){
-  histLazer.push(lazer[i])
-  lazer.splice(i,1)
-  render()
-}
-
-function addValor(){
-  const v = Number(valor.value)
-  const d = destino.value
-  if(!v) return
-  saldo += v
-  histFinanceiro.push(`${d} - R$ ${v}`)
-  valor.value=""
-  render()
-}
-
-function addCompra(){
-  const nome = compraNome.value
-  const valorCompra = Number(compraValor.value)
-  const categoria = compraCategoria.value
-  if(!nome || !valorCompra) return
-  compras.push({nome, valorCompra, categoria})
-  saldo += valorCompra
-  histFinanceiro.push(`${nome} - ${categoria} - R$ ${valorCompra}`)
-  compraNome.value=""
-  compraValor.value=""
+function switchUser(u){
+  user = u
+  document.getElementById('view-user').innerText = u
+  document.getElementById('btn-Manu').classList.toggle('bg-white',u==="Manu")
+  document.getElementById('btn-Pedro').classList.toggle('bg-white',u==="Pedro")
   render()
 }
 
 function render(){
-  document.getElementById('tarefas').innerHTML = tarefas.map((t,i)=>
-    `<div class="bg-white p-3 rounded flex justify-between">${t}<button onclick="removeTarefa(${i})">❌</button></div>`
-  ).join("")
+  document.getElementById('tarefas').innerHTML =
+    tarefas.filter(t=>t.user===user).map((t,i)=>`
+      <div class="bg-white p-3 rounded flex justify-between">
+        <span>${t.nome}</span>
+        <button onclick="tarefas.splice(${i},1);render()">✅</button>
+      </div>`).join("") || "Sem tarefas 🎉"
 
-  document.getElementById('lazer').innerHTML = lazer.map((l,i)=>
-    `<div class="bg-white p-3 rounded flex justify-between">${l}<button onclick="removeLazer(${i})">❌</button></div>`
-  ).join("")
+  document.getElementById('lazer').innerHTML =
+    lazer.map(l=>`<div class="bg-white p-2 rounded border">${l.nome} — R$ ${l.valor}</div>`).join("")
 
-  document.getElementById('listaCompras').innerHTML = compras.map(c=>
-    `<div class="bg-white p-3 rounded border flex justify-between text-sm">
-      <span>${c.nome} (${c.categoria})</span>
-      <strong>R$ ${c.valorCompra}</strong>
-    </div>`
-  ).join("")
+  document.getElementById('compras').innerHTML =
+    compras.map(c=>`<div class="bg-white p-2 rounded border">${c}</div>`).join("")
 
-  total.innerText = saldo.toLocaleString('pt-br',{style:'currency',currency:'BRL'})
+  const total = lazer.reduce((s,l)=>s+l.valor,0)
+  document.getElementById('total').innerText =
+    total.toLocaleString('pt-br',{style:'currency',currency:'BRL'})
 }
 
 render()
